@@ -1,3 +1,7 @@
+2002-03-11  Matthias Clasen  <maclas@gmx.de>
+
+	* gtkdoc-scangobj.in, gtkdoc-mkdb.in: Create docs for signals on interfaces.
+
 2002-02-01  Damon Chaplin  <damon@ximian.com>
 
 	* configure.in: check for openjade or jade. Patch from Stefan Kost
